# softpack-core

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  makefile  mkdocs.yml  pyproject.toml  requirements.txt  schema.graphql  setup.cfg  sitemap.xml  tox.ini
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml  release.yml
changelog/: index.html
contributing/: index.html
docs/: api.md  contributing.md  installation.md  usage.md
docs/how-to-guides/: create-an-environment.md
docs/reference/: api.md
how-to-guides/create-an-environment/: index.html
reference/api/: index.html
scripts/: recipe-requests.sh
search/: search_index.json
softpack/: app.py  artifacts.py  cli.py  config.py  environments.py  package_collections.py  packages.py  query.py  service.py  users.py
softpack/conf/: config.yaml
softpack/schemas/: environment.py  package.py  package_collection.py  user.py
softpack/schemas/pydantic/: environment.py  package.py  package_collection.py  user.py
softpack/schemas/strawberry/: environment.py  package.py  package_collection.py  user.py
softpack_core/: __init__.py  api.py  app.py  artifacts.py  graphql.py  ldapapi.py  main.py  module.py  moduleparse.py  service.py  spack.py  url.py
softpack_core/config/: models.py  settings.py
softpack_core/config/conf/: config.yml
softpack_core/schemas/: base.py  environment.py  groups.py  package_collection.py  status.py
softpack_core/templates/: readme.tmpl
tests/: __init__.py  conftest.py  test_app.py  test_environment.py  test_graphql.py  test_main.py  test_module.py  test_moduleparse.py  test_pygit.py  test_service.py  test_softpack.py
tests/data/specs/modules/: tests.yml
tests/files/: simple.module  simple.yml
tests/files/modules/: all_fields.mod  shpc.readme
tests/integration/: __init__.py  conftest.py  test_artifacts.py  test_builderupload.py  test_environment.py  test_groups.py  test_recipe_requests.py  test_resend_builds.py  test_service.py  test_spack.py  test_status.py  utils.py
tests/unit/: __init__.py  conftest.py  test_app.py  test_artifacts.py  test_environment.py  test_main.py  test_pygit.py  test_service.py
topics/design/: index.html
tutorials/getting-started/: index.html
