[tool]
[tool.poetry]
name = "softpack-core"
version = "0.1.0"
homepage = "https://github.com/wtsi-hgi/softpack-core"
description = "SoftPack Core backend service."
authors = ["altaf-ali <altaf.ali@sanger.ac.uk>", "SamO135 <so17@sanger.ac.uk", "KMace <km34@sanger.ac.uk"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
packages = [
    { include = "softpack_core" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pip = "^23.0.1"
archspec = "^0.2.0"
bokeh = ">=2.4.3,<3.0"
fastapi = "^0.94.0"
greenlet = "^2.0.2"
hvac = "^1.1.0"
jinja2 = "^3.1.2"
macholib = "^1.16.2"
mergedeep = "^1.3.4"
oras = "^0.1.17"
prefect = "2.8.6"
prefect-dask = "^0.2.3"
prefect-shell = "^0.1.5"
pydantic = "^1.10.6"
pygit2 = "^1.12.1"
python-box = "^7.0.1"
python-ldap = "^3.4.3"
requests = "<2.30.0"
ruamel-yaml = "^0.17.21"
semver = "^3.0.0"
singleton-decorator = "^1.0.0"
sqlalchemy = "1.4.45"
strawberry-graphql = "^0.177.1"
typer = "^0.9.0"
pytest-mock = "^3.11.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
autoflake = "^1.7.8"
black = "^23.1.0"
bump2version = "^1.0.1"
flake8 = "^5.0.4"
flake8-docstrings = "^1.7.0"
isort = "^5.12.0"
mypy = "^v1.0.1"
mypy-extensions = "^1.0.0"
pre-commit = "^3.1.1"
toml = "^0.10.2"
tox = "^4.4.6"
twine = "^4.0.2"
types-setuptools = "^67.7.0.1"
types-PyYAML = "^6.0.12.9"
types-requests = "^2.30.0.0"
virtualenv = "^20.20.0"

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.4.2"
mkdocs-autorefs = "^0.4.1"
mkdocs-include-markdown-plugin = "^3.9.1"
mkdocs-material = "^9.1.0"
mkdocstrings = "^0.20.0"
mkdocstrings-python = "^0.8.3"
mkdocs-material-extensions = "^1.1.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-asyncio = "^0.21.0"
pytest-cases = "^3.6.14"
pytest-cov = "^4.0.0"
pytest-httpx = "^0.21.3"
types-PyYAML = "^6.0.12.9"

[tool.poetry.scripts]
softpack-core = 'softpack_core.main:main'

[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
skip_gitignore = true
# you can skip files as below
#skip_glob = docs/conf.py

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:starlette"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
